--- a/05ex_pandas.ipynb
+++ b/05ex_pandas.ipynb
@@ -11,20 +11,172 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/bin/bash: wget: command not found\r\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>HEAD</th>\n",
+       "      <th>FPGA</th>\n",
+       "      <th>TDC_CHANNEL</th>\n",
+       "      <th>ORBIT_CNT</th>\n",
+       "      <th>BX_COUNTER</th>\n",
+       "      <th>TDC_MEAS</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>123</td>\n",
+       "      <td>3869200167</td>\n",
+       "      <td>2374</td>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>124</td>\n",
+       "      <td>3869200167</td>\n",
+       "      <td>2374</td>\n",
+       "      <td>27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>63</td>\n",
+       "      <td>3869200167</td>\n",
+       "      <td>2553</td>\n",
+       "      <td>28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>64</td>\n",
+       "      <td>3869200167</td>\n",
+       "      <td>2558</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>64</td>\n",
+       "      <td>3869200167</td>\n",
+       "      <td>2760</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1310715</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>62</td>\n",
+       "      <td>3869211171</td>\n",
+       "      <td>762</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1310716</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3869211171</td>\n",
+       "      <td>763</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1310717</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>64</td>\n",
+       "      <td>3869211171</td>\n",
+       "      <td>764</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1310718</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>139</td>\n",
+       "      <td>3869211171</td>\n",
+       "      <td>769</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1310719</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>61</td>\n",
+       "      <td>3869211171</td>\n",
+       "      <td>762</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1310720 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         HEAD  FPGA  TDC_CHANNEL   ORBIT_CNT  BX_COUNTER  TDC_MEAS\n",
+       "0           1     0          123  3869200167        2374        26\n",
+       "1           1     0          124  3869200167        2374        27\n",
+       "2           1     0           63  3869200167        2553        28\n",
+       "3           1     0           64  3869200167        2558        19\n",
+       "4           1     0           64  3869200167        2760        25\n",
+       "...       ...   ...          ...         ...         ...       ...\n",
+       "1310715     1     0           62  3869211171         762        14\n",
+       "1310716     1     1            4  3869211171         763        11\n",
+       "1310717     1     0           64  3869211171         764         0\n",
+       "1310718     1     0          139  3869211171         769         0\n",
+       "1310719     1     0           61  3869211171         762        18\n",
+       "\n",
+       "[1310720 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# If haven't downloaded it yet, please get the data file with wget\n",
-    "!wget https://www.dropbox.com/s/xvjzaxzz3ysphme/data_000637.txt -P ./data/"
+    "#!wget https://www.dropbox.com/s/xvjzaxzz3ysphme/data_000637.txt -P ./data/\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "pd.read_csv('data_000637.txt')"
    ]
   },
   {
@@ -36,11 +188,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#basta una riga di codice per ogni esercizio"
+    "#basta una riga di codice per ogni esercizio\n",
+    "data = pd.read_csv('data_000637.txt', nrows = np.random.randint(10000, data.shape[0])) #leggere direttamente le prime righe del file\n",
+    "#data_new = data.head(np.random.randint(10000, data.shape[0])) #ok funziona"
    ]
   },
   {
@@ -54,10 +208,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ORBIT_CNT\n",
+      "3869200167    124133\n",
+      "3869200168     97201\n",
+      "3869200169    144343\n",
+      "3869200170    217462\n",
+      "3869200171    228822\n",
+      "               ...  \n",
+      "3869200536    104579\n",
+      "3869200537    244667\n",
+      "3869200538    215175\n",
+      "3869200539    174035\n",
+      "3869200540     31557\n",
+      "Name: BX_COUNTER, Length: 374, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = data.groupby('ORBIT_CNT')['BX_COUNTER'].transform(pd.max) #SBAGLIATO\n",
+    "print(x) #restituisce una serie con indice Orbit_cnt"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -71,7 +248,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data['AbsTime'] = pd.Series( , index = data. )"
+   ]
   },
   {
    "cell_type": "markdown",
